<resources>

    <string name="app_name">TypesafeCon</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash">TypesafeCon</string>
    <string name="title_activity_home">TypesafeCon</string>
    <string name="button_events_text">Events</string>
    <string name="button_speakers_text">Speakers</string>
    <string name="button_favourites_text">Favorites</string>
    <string name="button_playground_text">Playground</string>
    <string name="button_about_text">About TypesafeCon</string>
    <string name="title_activity_speakers">Speakers</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_event_info">EventInfo</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_playground">Playground</string>
    <string name="playground">Playground</string>
    <string name="speakers">Speakers</string>
    <string name="favourites">Favorites</string>
    <string name="events">Events</string>
    <string name="event_title">Event Title</string>
    <string name="about">About</string>
    <string name="scala1">TypesafeCon</string>
    <string name="url_playground">https://scala1.tindr.co/playground</string>
    <string name="url_about">https://scala1.tindr.co/</string>
    <string name="url_events_feed">https://scala1.tindr.co/events</string>
    <string name="url_event_info_base">https://scala1.tindr.co/events/</string>
    <string name="url_speakers_feed">https://scala1.tindr.co/speakers</string>
    <string name="url_speakers_info_base">https://scala1.tindr.co/speakers/</string>
    <string name="title_activity_speakers_info">SpeakersInfo</string>

</resources>