<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/title_tile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:src="@drawable/splash_scala1_logo" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:background="@drawable/scala_button"
        android:drawableTop="@drawable/home_events_icon"
        android:gravity="top|center_horizontal"
        android:paddingBottom="@dimen/scala_button_text_padding"
        android:text="@string/button_events_text" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="57dp"
        android:background="@drawable/scala_button"
        android:drawableTop="@drawable/home_speakers_icon"
        android:gravity="top|center_horizontal"
        android:paddingBottom="@dimen/scala_button_text_padding"
        android:text="@string/button_speakers_text" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:background="@drawable/scala_button"
        android:drawableTop="@drawable/home_playground_icon"
        android:gravity="top|center_horizontal"
        android:paddingBottom="@dimen/scala_button_text_padding"
        android:text="@string/button_playground_text" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginRight="20dp"
        android:background="@drawable/scala_button"
        android:drawableTop="@drawable/home_favourites_icon"
        android:gravity="top|center_horizontal"
        android:paddingBottom="@dimen/scala_button_text_padding"
        android:text="@string/button_favourites_text" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Button01"
        android:layout_alignBottom="@+id/Button01"
        android:layout_toRightOf="@+id/Button01"
        android:background="@drawable/scala_button"
        android:drawableTop="@drawable/home_icon_about"
        android:gravity="top|center_horizontal"
        android:paddingBottom="@dimen/scala_button_text_padding"
        android:text="@string/button_about_text" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:src="@drawable/splash_typesafe_logo" />

</RelativeLayout>
